adição do favicon

--- a/frontend/react/index.html
+++ b/frontend/react/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="src/componentes/img/icons8-pessoa-do-sexo-masculino-64.png" type="image/x-icon">
     <title>Rede social</title>
   </head>
   <body>
